--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,15 @@
 <html>
 <head>
-  <meta charset="UTF-8">
+  <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Sample React App</title>
 </head>
 <body>
   <div id="root"></div>
 
+
+  <!--> <script src="build/bundle.js"></script> </!-->
   <script src="build/bundle.js"></script>
 
 </body>
